# audio_summarizer

./: .gitignore  Makefile  README.md  server.sh  server_install.sh
src/chrome-extension/: background.js  content.js  manifest.json  offscreen.js  popup.html  popup.js
src/server/: pyproject.toml  server.py  stt.py  whisper_turbo.py
src/server/tests/: transcribe.hurl
